# gr-watterson

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: wattersonConfig.cmake
docs/: README.watterson
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: top_block.py  watterson_channel_model_test.grc
grc/: CMakeLists.txt  watterson_watterson.xml
include/watterson/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_watterson.cc  qa_watterson.h  test_watterson.cc
python/: CMakeLists.txt  __init__.py  watterson.py
swig/: CMakeLists.txt  watterson_swig.i
